# Baminithiya

./: .env  LICENSE  README.md  docker-compose.yml
Backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
Backend/app/apis/: auth.py  government.py  private.py  public.py  user.py
Backend/app/models/: disaster.py  resource.py  task.py  user.py  userrequest.py  users.py
Backend/app/services/: appwrite_service.py  auth_service.py  cnn_service.py  first_workflow.py  jwt_service.py  near_disaster_service.py  role_service.py  second_workflow.py  third_workflow.py
Backend/test/: test.http  test_api.py
Frontend/: Dockerfile  index.html  package.json
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/components/: ProtectedRoute.tsx
Frontend/src/components/auth/: Navbar.tsx  ProtectedRoute.tsx
Frontend/src/components/gov/: WorldMap.tsx
Frontend/src/components/private/: ResourceMap.tsx  WorldMap.tsx  tasksList.tsx
Frontend/src/components/public/: Footer.tsx  alert.tsx  (+4 more)
Frontend/src/schema/: user.ts
Frontend/src/services/: api.ts  appwrite.ts  auth.ts  government.ts  private.ts  public.ts  user.ts
Frontend/src/types/: Resource.ts  disaster.ts  emergencyRequest.ts  messages.ts  task.ts  users.ts
Frontend/src/utils/: theme.ts
WhatsAppBot/: .gitignore  README.md  main.js  package.json  pnpm-lock.yaml
mcp/: .gitignore  requirements.txt  server.py
nginx/: 502.html  Dockerfile  cors-fix.conf  nginx.conf
telegramBot/: .gitignore  README.md  disaster_api.py  main.py  pyproject.toml  requirements.txt  run_bot.py
(+22 files in other folders)
